--- a/index.html
+++ b/index.html
@@ -78,28 +78,107 @@
     </article>
     <article>
         <div class="cards">
-        <div class="card_title">
-        <h3>Hébergements à Marseille</h3>
-        </div>
-        <div id="cards1">
-        <div class="card">
-            <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Chambre de l'Auberge La Canebière">
-            <p>
-                <div class="card_caption">
-                    Auberge La Canebière
+            <div id="cards_1">
+            <div id="cards_title">
+                <h3>Hébergements à Marseille</h3>
                 </div>
-                <div>
-                    Nuit à partir de 25€
-                </div>
-                <span>
-                    <i class="fa-solid fa-star"></i>
-                </span>
-                    <span>
-                        <i class="fa-solid fa-star"></i>
-                    </span>
+                <div id="cards1">
+                <div id="card">
+                    <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Chambre de l'Auberge La Canebière">
+                    <p>
+                        <div class="card_caption">
+                            Auberge La Canebière
+                        </div>
+                        <div>
+                            Nuit à partir de 25€
+                        </div>
                         <span>
                             <i class="fa-solid fa-star"></i>
                         </span>
+                            <span>
+                                <i class="fa-solid fa-star"></i>
+                            </span>
+                                <span>
+                                    <i class="fa-solid fa-star"></i>
+                                </span>
+                                    <span>
+                                        <i class="fa-solid fa-star"></i>
+                                    </span>
+                                        <span>
+                                            <i class="fa-duotone fa-star"></i>
+                                        </span>
+                                    </p>
+                </div>
+                <div id="card">
+                    <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Chambre de l'Hôtel du port">
+                    <p>
+                        <div class="card_caption">
+                            Hôtel du port
+                        </div>
+                        <div>
+                            Nuit à partir de 52€
+                        </div>
+                        <span>
+                            <i class="fa-solid fa-star"></i>
+                        </span>
+                            <span>
+                                <i class="fa-solid fa-star"></i>
+                            </span>
+                                <span>
+                                    <i class="fa-solid fa-star"></i>
+                                </span>
+                                    <span>
+                                        <i class="fa-solid fa-star"></i>
+                                    </span>
+                                        <span>
+                                            <i class="fa-duotone fa-star"></i>
+                                        </span>
+                    </p>
+                </div>
+                <div id="card">
+                    <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Chambre de l'Hôtel Les mouettes">
+                    <p>
+                        <div class="card_caption">
+                            Hôtel Les mouettes
+                        </div>
+                        <div>
+                            Nuit à partir de 76€
+                        </div>
+                        <span>
+                            <i class="fa-solid fa-star"></i>
+                        </span>
+                            <span>
+                                <i class="fa-solid fa-star"></i>
+                            </span>
+                                <span>
+                                    <i class="fa-solid fa-star"></i>
+                                </span>
+                                    <span>
+                                        <i class="fa-solid fa-star"></i>
+                                    </span>
+                                        <span>
+                                            <i class="fa-duotone fa-star"></i>
+                                        </span>
+                                    </p>
+                </div>
+                <div id="card">
+                    <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Chambre de l'Hôtel de la mer">
+                    <p>
+                        <div class="card_caption">
+                            Hôtel de la mer
+                        </div>
+                        <div>
+                            Nuit à partir de 46€
+                        </div>
+                        <span>
+                            <i class="fa-solid fa-star"></i>
+                        </span>
+                            <span>
+                                <i class="fa-solid fa-star"></i>
+                            </span>
+                            <span>
+                                <i class="fa-solid fa-star"></i>
+                            </span>
                             <span>
                                 <i class="fa-solid fa-star"></i>
                             </span>
@@ -107,22 +186,16 @@
                                     <i class="fa-duotone fa-star"></i>
                                 </span>
                             </p>
-        </div>
-        <div class="card">
-            <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Chambre de l'Hôtel du port">
-            <p>
-                <div class="card_caption">
-                    Hôtel du port
                 </div>
-                <div>
-                    Nuit à partir de 52€
-                </div>
-                <span>
-                    <i class="fa-solid fa-star"></i>
-                </span>
-                    <span>
-                        <i class="fa-solid fa-star"></i>
-                    </span>
+                <div id="card">
+                    <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Chambre de l'Auberge Le Panier">
+                    <p>
+                        <div class="card_caption">
+                        <strong>Auberge Le Panier</strong>
+                    </div>
+                        <div>
+                            Nuit à partir de 23€
+                        </div>
                         <span>
                             <i class="fa-solid fa-star"></i>
                         </span>
@@ -130,203 +203,123 @@
                                 <i class="fa-solid fa-star"></i>
                             </span>
                                 <span>
-                                    <i class="fa-duotone fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
                                 </span>
-            </p>
-        </div>
-        <div class="card">
-            <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Chambre de l'Hôtel Les mouettes">
-            <p>
-                <div class="card_caption">
-                    Hôtel Les mouettes
+                                    <span>
+                                        <i class="fa-solid fa-star"></i>
+                                    </span>
+                                        <span>
+                                            <i class="fa-duotone fa-star"></i>
+                                        </span>
+                                    </p>
                 </div>
-                <div>
-                    Nuit à partir de 76€
-                </div>
-                <span>
-                    <i class="fa-solid fa-star"></i>
-                </span>
-                    <span>
+                <div id="card">
+                    <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Chambre de l'Auberge Chez Amina">
+                    <p>
+                        <div class="card_caption">
+                        <strong>Auberge Chez Amina</strong>
+                    </div>
+                        <div>
+                        Nuit à partir de 96€
+                    </div>
+                        <span>
                         <i class="fa-solid fa-star"></i>
-                    </span>
+                        </span>
+                        <span>
+                        <i class="fa-solid fa-star"></i>
+                        </span>
                         <span>
                             <i class="fa-solid fa-star"></i>
                         </span>
                             <span>
-                                <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
                             </span>
-                                <span>
-                                    <i class="fa-duotone fa-star"></i>
-                                </span>
-                            </p>
-        </div>
-        <div class="card">
-            <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Chambre de l'Hôtel de la mer">
-            <p>
-                <div class="card_caption">
-                    Hôtel de la mer
-                </div>
-                <div>
-                    Nuit à partir de 46€
-                </div>
-                <span>
-                    <i class="fa-solid fa-star"></i>
-                </span>
-                    <span>
-                        <i class="fa-solid fa-star"></i>
-                    </span>
-                    <span>
-                        <i class="fa-solid fa-star"></i>
-                    </span>
-                    <span>
-                        <i class="fa-solid fa-star"></i>
-                    </span>
-                        <span>
-                            <i class="fa-duotone fa-star"></i>
+                            <span>
+                                <i class="fa-duotone fa-star"></i>
                         </span>
                     </p>
-        </div>
-        <div class="card">
-            <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Chambre de l'Auberge Le Panier">
-            <p>
-                <div class="card_caption">
-                <strong>Auberge Le Panier</strong>
-            </div>
-                <div>
-                    Nuit à partir de 23€
                 </div>
-                <span>
-                    <i class="fa-solid fa-star"></i>
-                </span>
-                    <span>
-                        <i class="fa-solid fa-star"></i>
-                    </span>
-                        <span>
-                            <i class="fa-solid fa-star"></i>
-                        </span>
-                            <span>
-                                <i class="fa-solid fa-star"></i>
-                            </span>
-                                <span>
-                                    <i class="fa-duotone fa-star"></i>
+                <div id="more">
+                    <p>Afficher plus</p>
+                            </div>
+                </div>
+                <div id="cards_2">
+                            <div id="cards_title">
+                                <h3>Les plus populaires</h3>
+                                <i class="fa-solid fa-chart-line"></i>
+                            </div>
+                            <div id="cards2">
+                            <div id="card2">
+                                <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Chambre de l'Hôtel le soleil du matin">
+                                <div class="card_caption">
+                                <p>
+                                    Hôtel le soleil du matin
+                                    Nuit à partir de 128€
+                                    <span>
+                                    <i class="fa-solid fa-star"></i>
+                                    </span>
+                                    <span>
+                                    <i class="fa-solid fa-star"></i>
+                                    </span>
+                                    <span>
+                                    <i class="fa-solid fa-star"></i>
+                                    </span>
+                                    <span>
+                                    <i class="fa-solid fa-star"></i>
+                                    </span>
+                                    <span>
+                                        <i class="fa-duotone fa-star"></i>
                                 </span>
                             </p>
+                            </div>
+                            </div>
+                            <div id="card2">
+                                <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Chambres d'hôtes Au coeur de l'eau">
+                                <div id="card_caption">
+                                <p>
+                                    Chambres d'hôtes Au coeur de l'eau
+                                    Nuit à partir de 71€
+                                    <span>
+                                    <i class="fa-solid fa-star"></i>
+                                    <span>
+                                    <i class="fa-solid fa-star"></i>
+                                    <span>
+                                    <i class="fa-solid fa-star"></i>
+                                    </span>
+                                    <span>
+                                    <i class="fa-solid fa-star"></i>
+                                    </span>
+                                    <span>
+                                        <i class="fa-duotone fa-star"></i>
+                                </span>
+                            </p>
+                                </div>
+                            </div>
+                            <div id="card2">
+                                <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Chambre de l'Hotêl Bleu et Blanc">
+                                <div id="card_caption">
+                                <p>
+                                    Hotêl Bleu et Blanc
+                                        Nuit à partir de 68€
+                                    <span>
+                                    <i class="fa-solid fa-star"></i>
+                                    </span>
+                                    <span>
+                                    <i class="fa-solid fa-star"></i>
+                                    </span>
+                                    <span>
+                                    <i class="fa-solid fa-star"></i>
+                                    </span>
+                                    <span>
+                                        <i class="fa-solid fa-star"></i>
+                                    </span>
+                                        <span>
+                                            <i class="fa-duotone fa-star"></i>
+                                </span>
+                            </p>
+                            </div>
+                        </div>
         </div>
-        <div class="card">
-            <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Chambre de l'Auberge Chez Amina">
-            <p>
-                <div class="card_caption">
-                <strong>Auberge Chez Amina</strong>
-            </div>
-                <div>
-                Nuit à partir de 96€
-            </div>
-                <span>
-                <i class="fa-solid fa-star"></i>
-                </span>
-                <span>
-                <i class="fa-solid fa-star"></i>
-                </span>
-                <span>
-                    <i class="fa-solid fa-star"></i>
-                </span>
-                    <span>
-                    <i class="fa-solid fa-star"></i>
-                    </span>
-                    <span>
-                        <i class="fa-duotone fa-star"></i>
-                </span>
-            </p>
-        </div>
-        <div class="more">
-            <p>Afficher plus</p>
-                    </div>
-    </div>
-    </article>
-    <article>
-        <div class="cards_2">
-        <div>
-            <h3>Les plus populaires</h3>
-            <i class="fa-solid fa-chart-line"></i>
-        </div>
-        <div id="cards2">
-        <div class="card2">
-            <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Chambre de l'Hôtel le soleil du matin">
-            <p>
-                <div class="card_caption">
-                <strong>Hôtel le soleil du matin</strong>
-            </div>
-                <div>
-                Nuit à partir de 128€
-            </div>
-                <span>
-                <i class="fa-solid fa-star"></i>
-                </span>
-                <span>
-                <i class="fa-solid fa-star"></i>
-                </span>
-                <span>
-                <i class="fa-solid fa-star"></i>
-                </span>
-                <span>
-                <i class="fa-solid fa-star"></i>
-                </span>
-                <span>
-                    <i class="fa-duotone fa-star"></i>
-            </span>
-        </p>
-        </div>
-        <div class="card2">
-            <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Chambres d'hôtes Au coeur de l'eau">
-            <p>
-                <div class="card_caption">
-                <strong>Chambres d'hôtes Au coeur de l'eau</strong>
-            </div>
-                <div>
-                Nuit à partir de 71€
-            </div>
-                <span>
-                <i class="fa-solid fa-star"></i>
-                <span>
-                <i class="fa-solid fa-star"></i>
-                <span>
-                <i class="fa-solid fa-star"></i>
-                </span>
-                <span>
-                <i class="fa-solid fa-star"></i>
-                </span>
-                <span>
-                    <i class="fa-duotone fa-star"></i>
-            </span>
-        </p>
-        </div>
-        <div class="card2">
-            <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Chambre de l'Hotêl Bleu et Blanc">
-            <p>
-                <div class="card_caption">
-                <strong>Hotêl Bleu et Blanc</strong>
-            </div>
-                <div>
-                    Nuit à partir de 68€
-                </div>
-                <span>
-                <i class="fa-solid fa-star"></i>
-                </span>
-                <span>
-                <i class="fa-solid fa-star"></i>
-                </span>
-                <span>
-                <i class="fa-solid fa-star"></i>
-                </span>
-                <span>
-                    <i class="fa-solid fa-star"></i>
-                </span>
-                    <span>
-                        <i class="fa-duotone fa-star"></i>
-            </span>
-        </p>
-        </div>
-    </div>
     </article>
     <article>
         <div><h3>Activités à Marseille</h3></div>
