--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css">
   <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
   <script src="https://kit.fontawesome.com/cdb14ce344.js" crossorigin="anonymous"></script>
-  <meta name="viewport" content="width=1400, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
     <header>
@@ -192,28 +192,28 @@
             <article>
                 <div class="activites">
                     <div class="activites_title">
-                <h4>Activités</h4>
+                <h4>Activités à Marseille</h4>
                     </div>
                     <div class="activites_cards">
-                        <div class="activites_card1">
+                        <div class="activites_card">
                             <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux-Port">
                             <div class="activites_card_info">
                                 <h5>Vieux-Port</h5>
                             </div>
                         </div>
-                        <div class="activites_card2">
+                        <div class="activites_card">
                             <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues">
                             <div class="activites_card_info">
                                 <h5>Fort de Pomègues</h5>
                             </div>
                         </div>
-                        <div class="activites_card1">
+                        <div class="activites_card">
                             <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc national des Calanques">
                             <div class="activites_card_info">
                                 <h5>Parc national des Calanques</h5>
                             </div>
                         </div>
-                        <div class="activites_card2">
+                        <div class="activites_card">
                             <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre Dame de la Garde">
                             <div class="activites_card_info">
                                 <h5>Notre-Dame-de-la-Garde</h5>
