--- a/index.html
+++ b/index.html
@@ -6,15 +6,20 @@
   <link rel="stylesheet" href="style.css">
   <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
   <script src="https://kit.fontawesome.com/cdb14ce344.js" crossorigin="anonymous"></script>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" >
 </head>
 <body>
     <header>
     <a href="#">
-        <img src="images/logo/Booki.png" class="booki" alt="logo"></a>
+        <img src="images/logo/Booki.png" class="booki" alt="logo">
+    </a>
 <nav>
-    <a href="#"> Hébergements</a>
-    <a href="#"> Activités</a>
+    <a href="#">
+         Hébergements
+    </a>
+    <a href="#">
+         Activités
+    </a>
 </nav>
     </header>
     <main>
@@ -45,12 +50,11 @@
             </p>
     </div>
         <div class="hotels">
-            <section>
-                <div class="hebergements">
+            <section class="hebergements">
                 <h4>Hébergements à Marseille</h4>
                 <div class="hebergements_cards">
                     <div class="card">
-                        <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Chambre de l'Auberge La Canebière">
+                        <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Chambre de l'Auberge La Canebière" class="hotel_images">
                             <div class="card_info">
                                 <h5>Auberge La Canebière</h5>
                                 <p>Nuit à partir de 25€</p>
@@ -64,7 +68,7 @@
                             </div>
                     </div>
                     <div class="card">
-                        <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="">
+                        <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Chambre de l'Hotel du port" class="hotel_images">
                         <div class="card_info">
                             <h5>Hôtel du port</h5>
                             <p>Nuit à partir de 52€</p>
@@ -78,7 +82,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="">
+                        <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Chambre de l'Hotel Les Mouettes" class="hotel_images">
                         <div class="card_info">
                             <h5>Hôtel Les mouettes</h5>
                             <p>Nuit à partir de 76€</p>
@@ -92,7 +96,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="">
+                        <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Chambre de l'Hotel de la mer" class="hotel_images">
                         <div class="card_info">
                             <h5>Hôtel de la mer</h5>
                             <p>Nuit à partir de 46€</p>
@@ -106,7 +110,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="">
+                        <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Chambre de l'Auberge Le Panier" class="hotel_images">
                         <div class="card_info">
                             <h5>Auberge Le Panier</h5>
                             <p>Nuit à partir de 23€</p>
@@ -120,7 +124,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="">
+                        <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Chambre de l'Hotel Chez Amina" class="hotel_images">
                         <div class="card_info">
                             <h5>Hôtel Chez Amina</h5>
                             <p>Nuit à partir de 96€</p>
@@ -135,16 +139,14 @@
                     </div>
                 </div>
                 <h4>Afficher plus</h4>
-                </div>
             </section>
-            <section>
-                <div class="popular">
+            <section class="popular">
                     <div class="card_title">
                 <h4>Les plus populaires</h4><i class="fa-solid fa-chart-line"></i>
                     </div>
                     <div class="popular_cards">
                         <div class="popular_card">
-                            <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="">
+                            <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Chambre de l'Hotel Le soleil du matin" class="hotel_images">
                             <div class="popular_card_info">
                                 <h5>Hôtel Le soleil du matin</h5>
                                 <p>Nuit à partir de 128€</p>
@@ -158,7 +160,7 @@
                             </div>
                         </div>
                         <div class="popular_card">
-                            <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="">
+                            <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Chambre aux Chambres d'hôtes Au coeur de l'eau" class="hotel_images">
                             <div class="popular_card_info">
                                 <h5>Chambre d'hôtes Au coeur de l'eau</h5>
                                 <p>Nuit à partir de 71€</p>
@@ -172,7 +174,7 @@
                             </div>
                         </div>
                         <div class="popular_card">
-                            <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="">
+                            <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Chambre de l'Hotel Bleu et Blanc" class="hotel_images">
                             <div class="popular_card_info">
                                 <h5>Hôtel Bleu et Blanc</h5>
                                 <p>Nuit à partir de 68€</p>
@@ -186,11 +188,9 @@
                             </div>
                          </div>
                     </div>
-                </div>
             </section>
         </div>
-            <article>
-                <div class="activites">
+            <article class="activites">
                     <div class="activites_title">
                 <h4>Activités à Marseille</h4>
                     </div>
@@ -220,7 +220,6 @@
                             </div>
                         </div>
                     </div>
-                </div>
             </article>
         </main>
     <footer>
