:fix: différente class pour empêcher les problèmes d'affichages media queries, media queries filtres et rajout de propriété css pour le logo
Les propriétés CSS pour le texte "Afficher plus" entraient en conflit avec les autres balises h4 de la section sur la version mobile et causaient des problèmes sur la mise en page, les propriétés CSS height et width sur des éléments ont été remplacées par auto et non des valeurs incorrectes, les propriétés CSS appliquées sur les images de la page changeaient l'affichage du logo dans l'en-tête de la page, propriétés flexbox de la barre de filtres correspondent maintenant avec la maquette.

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         </div>
                     </div>
                 </div>
-                <h4>Afficher plus</h4>
+                <h4 class="more">Afficher plus</h4>
             </section>
             <section class="popular">
                     <div class="card_title">
