--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <img src="images/logo/Booki.png" class="booki" alt="logo">
     </a>
 <nav>
-    <a href="#" class="anchor_hebergements">
+    <a href="#">
         <span>
          Hébergements
         </span>
     </a>
-    <a href="#" class="anchor_activites">
+    <a href="#">
         <span>
          Activités
         </span>
@@ -34,21 +34,21 @@
                         <form action="#">
                             <i class="fa-solid fa-location-dot"></i>
                         <input placeholder="Marseille, France" type="search" id="searchbar">
-                        <button type="submit">Rechercher</button>
+                        <button type="submit"><div class="rechercher">Rechercher</div><i class="fa-solid fa-magnifying-glass"></i></button>
                         </form>
                     </div>
         </div>
         <div class="filterbar">
             <h3>Filtres</h3>
             <ul>
-        <li><span><i class="fa-solid fa-money-bill-wave"></i>Économique</span></li>
-        <li><div class="filter_1"><span><i class="fa-solid fa-person"></i>Familial</span></div></li>
-        <li><span><i class="fa-solid fa-heart"></i>Romantique</span></li>
-        <li><span><i class="fa-solid fa-dog"></i>Animaux autorisés</span></li>
+        <li><span><i class="fa-solid fa-money-bill-wave fa-lg"></i>Économique</span></li>
+        <li><span class="filter_1"><i class="fa-solid fa-person fa-lg"></i>Familial</span></li>
+        <li><span><i class="fa-solid fa-heart fa-lg"></i>Romantique</span></li>
+        <li><span><i class="fa-solid fa-dog fa-lg"></i>Animaux autorisés</span></li>
         </ul>
         </div>
     <div class="infobar">
-    <span><i class="fa-solid fa-info fa-2xs"></i></span>
+    <span><i class="fa-solid fa-info fa-sm"></i></span>
             <p>
              Plus de 500 logements disponibles dans cette ville
             </p>
