:wrench: changer les propriétés width en pourcentage pour le haut de la page, les tailles de police en em,

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Booki</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="CSS/style.css">
   <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
   <script src="https://kit.fontawesome.com/cdb14ce344.js" crossorigin="anonymous"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1" >
@@ -34,17 +34,17 @@
                         <form action="#">
                             <i class="fa-solid fa-location-dot"></i>
                         <input placeholder="Marseille, France" type="search" id="searchbar">
-                        <button type="submit"><div class="rechercher">Rechercher</div><i class="fa-solid fa-magnifying-glass"></i></button>
+                        <button type="submit"><span class="rechercher">Rechercher</span><i class="fa-solid fa-magnifying-glass"></i></button>
                         </form>
                     </div>
         </div>
         <div class="filterbar">
             <h3>Filtres</h3>
             <ul>
-        <li><span><i class="fa-solid fa-money-bill-wave fa-lg"></i>Économique</span></li>
-        <li><span class="filter_1"><i class="fa-solid fa-person fa-lg"></i>Familial</span></li>
-        <li><span><i class="fa-solid fa-heart fa-lg"></i>Romantique</span></li>
-        <li><span><i class="fa-solid fa-dog fa-lg"></i>Animaux autorisés</span></li>
+        <li><span><i class="fa-solid fa-money-bill-wave"></i>Économique</span></li>
+        <li><span class="filter_1"><i class="fa-solid fa-person"></i>Familial</span></li>
+        <li><span><i class="fa-solid fa-heart"></i>Romantique</span></li>
+        <li><span><i class="fa-solid fa-dog"></i>Animaux autorisés</span></li>
         </ul>
         </div>
     <div class="infobar">
@@ -57,8 +57,7 @@
             <section class="hebergements">
                 <h4>Hébergements à Marseille</h4>
                 <div class="hebergements_cards">
-                    <a href="#">
-                        <div class="card">
+                    <a href="#" class="card">
                             <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Chambre de l'Auberge La Canebière" class="hotel_images">
                                 <div class="card_info">
                                     <h5>Auberge La Canebière</h5>
@@ -71,10 +70,8 @@
                                         <i class="fa-solid fa-star fa-xs"></i>
                                     </div>
                                 </div>
-                        </div>
                     </a>
-                    <a href="#">
-                        <div class="card">
+                    <a href="#" class="card">
                             <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Chambre de l'Hotel du port" class="hotel_images">
                             <div class="card_info">
                                 <h5>Hôtel du port</h5>
@@ -87,10 +84,8 @@
                                     <i class="fa-solid fa-star fa-xs"></i>
                                 </div>
                             </div>
-                        </div>
                     </a>
-                    <a href="#">
-                        <div class="card">
+                    <a href="#" class="card">
                             <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Chambre de l'Hotel Les Mouettes" class="hotel_images">
                             <div class="card_info">
                                 <h5>Hôtel Les mouettes</h5>
@@ -103,10 +98,8 @@
                                     <i class="fa-solid fa-star fa-xs"></i>
                                 </div>
                             </div>
-                        </div>
                     </a>
-                    <a href="#">
-                        <div class="card">
+                    <a href="#" class="card">
                             <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Chambre de l'Hotel de la mer" class="hotel_images">
                             <div class="card_info">
                                 <h5>Hôtel de la mer</h5>
@@ -119,10 +112,8 @@
                                     <i class="fa-solid fa-star fa-xs"></i>
                                 </div>
                             </div>
-                        </div>
                     </a>
-                    <a href="#">
-                        <div class="card">
+                    <a href="#" class="card">
                             <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Chambre de l'Auberge Le Panier" class="hotel_images">
                             <div class="card_info">
                                 <h5>Auberge Le Panier</h5>
@@ -135,10 +126,8 @@
                                     <i class="fa-solid fa-star fa-xs"></i>
                                 </div>
                             </div>
-                        </div>
                     </a>
-                    <a href="#">
-                        <div class="card">
+                    <a href="#" class="card">
                             <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Chambre de l'Hotel Chez Amina" class="hotel_images">
                             <div class="card_info">
                                 <h5>Hôtel Chez Amina</h5>
@@ -151,7 +140,6 @@
                                     <i class="fa-solid fa-star fa-xs"></i>
                                 </div>
                             </div>
-                        </div>
                     </a>
                 </div>
                 <a href="#">
@@ -163,8 +151,7 @@
                 <h4>Les plus populaires</h4><i class="fa-solid fa-chart-line"></i>
                     </div>
                     <div class="popular_cards">
-                        <a href="#">
-                            <div class="popular_card">
+                        <a href="#" class="popular_card">
                                 <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Chambre de l'Hotel Le soleil du matin" class="hotel_images">
                                 <div class="popular_card_info">
                                     <h5>Hôtel Le soleil du matin</h5>
@@ -177,10 +164,8 @@
                                         <i class="fa-solid fa-star fa-xs"></i>
                                     </div>
                                 </div>
-                            </div>
                         </a>
-                        <a href="#">
-                            <div class="popular_card">
+                        <a href="#" class="popular_card">
                                 <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Chambre aux Chambres d'hôtes Au coeur de l'eau" class="hotel_images">
                                 <div class="popular_card_info">
                                     <h5>Chambre d'hôtes Au coeur de l'eau</h5>
@@ -193,10 +178,8 @@
                                         <i class="fa-solid fa-star fa-xs"></i>
                                     </div>
                                 </div>
-                            </div>
                         </a>
-                        <a href="#">
-                            <div class="popular_card">
+                        <a href="#" class="popular_card">
                                 <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Chambre de l'Hotel Bleu et Blanc" class="hotel_images">
                                 <div class="popular_card_info">
                                     <h5>Hôtel Bleu et Blanc</h5>
@@ -209,7 +192,6 @@
                                         <i class="fa-solid fa-star fa-xs"></i>
                                     </div>
                                 </div>
-                             </div>
                         </a>
                     </div>
             </section>
@@ -219,37 +201,29 @@
                 <h4>Activités à Marseille</h4>
                     </div>
                     <div class="activites_cards">
-                        <a href="#">
-                            <div class="activites_card">
+                        <a href="#" class="activites_card">
                                 <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux-Port">
                                 <div class="activites_card_info">
                                     <h5>Vieux-Port</h5>
                                 </div>
-                            </div>
                         </a>
-                        <a href="#">
-                            <div class="activites_card">
+                        <a href="#" class="activites_card">
                                 <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues">
                                 <div class="activites_card_info">
                                     <h5>Fort de Pomègues</h5>
                                 </div>
-                            </div>
                         </a>
-                        <a href="#">
-                            <div class="activites_card">
+                        <a href="#" class="activites_card">
                                 <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc national des Calanques">
                                 <div class="activites_card_info2">
                                     <h5>Parc national des Calanques</h5>
                                 </div>
-                            </div>
                         </a>
-                        <a href="#">
-                            <div class="activites_card">
+                        <a href="#" class="activites_card">
                                 <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre Dame de la Garde">
                                 <div class="activites_card_info2">
                                     <h5 class="notre-dame">Notre-Dame-de-la-Garde</h5>
                                 </div>
-                            </div>
                         </a>
                     </div>
             </article>
