--- a/index.html
+++ b/index.html
@@ -154,8 +154,10 @@
                         <a href="#" class="popular_card">
                                 <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Chambre de l'Hotel Le soleil du matin" class="hotel_images">
                                 <div class="popular_card_info">
-                                    <h5>Hôtel Le soleil du matin</h5>
-                                    <p>Nuit à partir de 128€</p>
+                                    <div class="card_info_text">
+                                        <h5>Hôtel Le soleil du matin</h5>
+                                        <p>Nuit à partir de 128€</p>
+                                    </div>
                                     <div class="score_container">
                                         <i class="fa-solid fa-star fa-xs"></i>
                                         <i class="fa-solid fa-star fa-xs"></i>
@@ -168,8 +170,10 @@
                         <a href="#" class="popular_card">
                                 <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Chambre aux Chambres d'hôtes Au coeur de l'eau" class="hotel_images">
                                 <div class="popular_card_info">
-                                    <h5>Chambre d'hôtes Au coeur de l'eau</h5>
-                                    <p>Nuit à partir de 71€</p>
+                                    <div class="card_info_text">
+                                        <h5>Chambre d'hôtes Au coeur de l'eau</h5>
+                                        <p>Nuit à partir de 71€</p>
+                                    </div>
                                     <div class="score_container">
                                         <i class="fa-solid fa-star fa-xs"></i>
                                         <i class="fa-solid fa-star fa-xs"></i>
@@ -182,8 +186,10 @@
                         <a href="#" class="popular_card">
                                 <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Chambre de l'Hotel Bleu et Blanc" class="hotel_images">
                                 <div class="popular_card_info">
-                                    <h5>Hôtel Bleu et Blanc</h5>
-                                    <p>Nuit à partir de 68€</p>
+                                    <div class="card_info_text">
+                                        <h5>Hôtel Bleu et Blanc</h5>
+                                        <p>Nuit à partir de 68€</p>
+                                    </div>
                                     <div class="score_container">
                                         <i class="fa-solid fa-star fa-xs"></i>
                                         <i class="fa-solid fa-star fa-xs"></i>
@@ -203,54 +209,48 @@
                     <div class="activites_cards">
                         <a href="#" class="activites_card">
                                 <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux-Port">
-                                <div class="activites_card_info">
                                     <h5>Vieux-Port</h5>
-                                </div>
                         </a>
                         <a href="#" class="activites_card">
                                 <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues">
-                                <div class="activites_card_info">
                                     <h5>Fort de Pomègues</h5>
-                                </div>
                         </a>
                         <a href="#" class="activites_card">
                                 <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc national des Calanques">
-                                <div class="activites_card_info2">
                                     <h5>Parc national des Calanques</h5>
-                                </div>
                         </a>
                         <a href="#" class="activites_card">
                                 <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre Dame de la Garde">
-                                <div class="activites_card_info2">
-                                    <h5 class="notre-dame">Notre-Dame-de-la-Garde</h5>
-                                </div>
+                                    <h5>Notre-Dame-de-la-Garde</h5>
                         </a>
                     </div>
             </article>
         </main>
     <footer>
-    <div class="footer_links">
-        <h3>À propos</h3>
-        <ul>
-            <li><a href="#">Fonctionnement du site</a></li>
-            <li><a href="#">Conditions générales</a></li>
-            <li><a href="#">Données et confidentialité</a></li>
-            </ul>
-    </div>
-    <div class="footer_links">
-        <h3>Nos hébergements</h3>
-        <ul>
-            <li><a href="#">Charte qualité</a></li>
-            <li><a href="#">Proposer votre hôtel</a></li>
-            </ul>
-    </div>
-    <div class="footer_links">
-        <h3>Assistance</h3>
-        <ul>
-            <li><a href="#">Centre d'aide</a></li>
-            <li><a href="#">Nous contacter</a></li>
-            </ul>
-    </div>
+        <div class="footer_container">
+            <div class="footer_links">
+                <h3>À propos</h3>
+                <ul>
+                    <li><a href="#">Fonctionnement du site</a></li>
+                    <li><a href="#">Conditions générales</a></li>
+                    <li><a href="#">Données et confidentialité</a></li>
+                    </ul>
+            </div>
+            <div class="footer_links">
+                <h3>Nos hébergements</h3>
+                <ul>
+                    <li><a href="#">Charte qualité</a></li>
+                    <li><a href="#">Proposer votre hôtel</a></li>
+                    </ul>
+            </div>
+            <div class="footer_links">
+                <h3>Assistance</h3>
+                <ul>
+                    <li><a href="#">Centre d'aide</a></li>
+                    <li><a href="#">Nous contacter</a></li>
+                    </ul>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
