--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <img src="images/logo/Booki.png" class="booki" alt="logo">
     </a>
 <nav>
-    <a href="#">
+    <a href="#hebergements_a_marseille">
         <span>
          Hébergements
         </span>
     </a>
-    <a href="#">
+    <a href="#activites_a_marseille">
         <span>
          Activités
         </span>
@@ -54,7 +54,7 @@
             </p>
     </div>
         <div class="hotels">
-            <section class="hebergements">
+            <section class="hebergements" id="hebergements_a_marseille">
                 <h4>Hébergements à Marseille</h4>
                 <div class="hebergements_cards">
                     <a href="#" class="card">
@@ -202,7 +202,7 @@
                     </div>
             </section>
         </div>
-            <article class="activites">
+            <article class="activites" id="activites_a_marseille">
                     <div class="activites_title">
                 <h4>Activités à Marseille</h4>
                     </div>
