--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 </head>
 <body>
     <header>
-    <a href="#">
-        <img src="images/logo/Booki.png" class="booki" alt="logo">
-    </a>
+    <div class="header_logo">
+        <a href="#">
+            <img src="images/logo/Booki.png" class="booki" alt="logo">
+        </a>
+    </div>
 <nav>
     <a href="#hebergements_a_marseille">
         <span>
@@ -41,10 +43,10 @@
         <div class="filterbar">
             <h3>Filtres</h3>
             <ul>
-        <li><span><i class="fa-solid fa-money-bill-wave"></i>Économique</span></li>
-        <li><span class="filter_1"><i class="fa-solid fa-person"></i>Familial</span></li>
-        <li><span><i class="fa-solid fa-heart"></i>Romantique</span></li>
-        <li><span><i class="fa-solid fa-dog"></i>Animaux autorisés</span></li>
+        <li><span><i class="fa-solid fa-money-bill-wave"></i><p>Économique</p></span></li>
+        <li><span class="filter_1"><i class="fa-solid fa-person"></i><p>Familial</p></span></li>
+        <li><span><i class="fa-solid fa-heart"></i><p>Romantique</p></span></li>
+        <li><span><i class="fa-solid fa-dog"></i><p>Animaux autorisés</p></span></li>
         </ul>
         </div>
     <div class="infobar">
