:wrench: correction des valeurs en vw
border radius augmenté pour les filtres conformément à la maquette, correction des marges et tailles des images avec clamp et d'autres unités pour limiter la taille des éléments de la page sur les grands écrans

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
         <div class="filterbar">
             <h3>Filtres</h3>
             <ul>
-        <li><span><i class="fa-solid fa-money-bill-wave"></i>Économique</span></li>
-        <li><span class="filter_1"><i class="fa-solid fa-person"></i>Familial</span></li>
-        <li><span><i class="fa-solid fa-heart"></i>Romantique</span></li>
-        <li><span><i class="fa-solid fa-dog"></i>Animaux autorisés</span></li>
+        <li><i class="fa-solid fa-money-bill-wave"></i>Économique</li>
+        <li><i class="fa-solid fa-person"></i>Familial</li>
+        <li><i class="fa-solid fa-heart"></i>Romantique</li>
+        <li><i class="fa-solid fa-dog"></i>Animaux autorisés</li>
         </ul>
         </div>
     <div class="infobar">
@@ -236,21 +236,21 @@
                     <li><a href="#">Fonctionnement du site</a></li>
                     <li><a href="#">Conditions générales</a></li>
                     <li><a href="#">Données et confidentialité</a></li>
-                    </ul>
+                </ul>
             </div>
             <div class="footer_links">
                 <h3>Nos hébergements</h3>
                 <ul>
                     <li><a href="#">Charte qualité</a></li>
                     <li><a href="#">Proposer votre hôtel</a></li>
-                    </ul>
+                </ul>
             </div>
             <div class="footer_links">
                 <h3>Assistance</h3>
                 <ul>
                     <li><a href="#">Centre d'aide</a></li>
                     <li><a href="#">Nous contacter</a></li>
-                    </ul>
+                </ul>
             </div>
         </div>
     </footer>
